--- a/index.html
+++ b/index.html
@@ -3,13 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generative Art with p5.js</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
-    <script src="sketch.js"></script>
+    <title>Generative Art Gallery</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+            background: #f5f5f5;
+        }
+
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 2rem;
+            font-size: 2.5rem;
+        }
+
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+            padding: 1rem;
+        }
+
+        .piece {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
+            color: inherit;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .piece:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 8px 12px rgba(0,0,0,0.15);
+        }
+
+        .piece-image-container {
+            aspect-ratio: 1;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .piece img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+        .piece-info {
+            padding: 1.5rem;
+        }
+
+        .piece h2 {
+            margin: 0 0 0.5rem 0;
+            color: #333;
+            font-size: 1.25rem;
+        }
+
+        .piece p {
+            margin: 0;
+            color: #666;
+            font-size: 0.9rem;
+            line-height: 1.5;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 1024px) {
+            .gallery {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 640px) {
+            .gallery {
+                grid-template-columns: 1fr;
+            }
+            
+            body {
+                padding: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <main>
-    </main>
+    <h1>Generative Art Gallery</h1>
+    <div class="gallery">
+        <a href="sketches/01_flow_field/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/01_flow_field/preview.png" alt="Flow Field Study Preview">
+            </div>
+            <div class="piece-info">
+                <h2>Flow Field Study</h2>
+                <p>A Tyler Hobbs-inspired piece using flow fields and organic curves.</p>
+            </div>
+        </a>
+        <a href="sketches/02_attention/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/02_attention/preview.png" alt="Attention Study Preview">
+            </div>
+            <div class="piece-info">
+                <h2>Attention</h2>
+                <p>A composition of interconnected circles on a grid, featuring organic line patterns and bold geometric accents.</p>
+            </div>
+        </a>
+        <a href="sketches/03_circles_01/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/03_circles_01/preview.png" alt="Circles 01 Preview">
+            </div>
+            <div class="piece-info">
+                <h2>Circles 01</h2>
+                <p>A study in circular forms and compositions.</p>
+            </div>
+        </a>
+        <a href="sketches/04_math/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/04_math/preview.png" alt="Mathematical Patterns Preview">
+            </div>
+            <div class="piece-info">
+                <h2>Mathematical Patterns</h2>
+                <p>Exploring the beauty of mathematical functions and geometric relationships.</p>
+            </div>
+        </a>
+        <a href="sketches/05_circlize/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/05_circlize/preview.png" alt="Circlize Preview">
+            </div>
+            <div class="piece-info">
+                <h2>Circlize</h2>
+                <p>Transform images into dynamic circle-based art with interactive mouse effects.</p>
+            </div>
+        </a>
+    </div>
 </body>
 </html> 
