--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
                 <p>A tribute to Vera Molnar's algorithmic art, featuring randomly distributed lines with controlled variations in density and orientation.</p>
             </div>
         </a>
+        <a href="sketches/07_lewitt/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/07_lewitt/preview.png" alt="LeWitt Preview">
+            </div>
+            <div class="piece-info">
+                <h2>LeWitt</h2>
+                <p>Interactive interpretations of Sol LeWitt's wall drawings, exploring systematic line arrangements and geometric progressions.</p>
+            </div>
+        </a>
+        <a href="sketches/08_kawano/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/08_kawano/preview.png" alt="Kawano Preview">
+            </div>
+            <div class="piece-info">
+                <h2>Kawano</h2>
+                <p>Digital art generator inspired by Hiroshi Kawano's pioneering computer art, featuring systematic color theory and geometric patterns.</p>
+            </div>
+        </a>
     </div>
 </body>
 </html> 
