Add AARON tribute sketch with organic line forms and gallery integration

--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
                 <p>Digital art generator inspired by Hiroshi Kawano's pioneering computer art, featuring systematic color theory and geometric patterns.</p>
             </div>
         </a>
+        <a href="sketches/09_aaron/index.html" class="piece">
+            <div class="piece-image-container">
+                <img src="sketches/09_aaron/preview.png" alt="AARON Tribute Preview">
+            </div>
+            <div class="piece-info">
+                <h2>AARON Tribute</h2>
+                <p>A tribute to Harold Cohen's AARON, generating organic forms with confident linework and compositional awareness.</p>
+            </div>
+        </a>
     </div>
 </body>
 </html> 
